#
# Copyright (c) 2025 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: Apache-2.0
#
# Contributors:
#   Julien Enoch, <julien.enoch@zettascale.tech>
#
[package]
name = "ros2-types-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
futures = "0.3.31"
strum = { version = "0.27", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.45.1", default-features = false } # Default features are disabled due to some crates' requirements
tracing = "0.1.41"
walkdir = "2.5.0"
zenoh = { version = "1.6.2", features = [
  "plugins",
  "internal",
  "unstable",
  "shared-memory",
] }
zenoh-keyexpr = { version = "1.6.2", features = ["unstable"] }
zenoh-pinned-deps-1-75 = "1.6.2"
zenoh-plugin-rest = { version = "1.6.2", default-features = false, features = [
  "static_plugin",
]  }